<resources>
    <string name="app_name">BollyMovies</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_home">Home</string>
    <string name="menu_my_list">Minha lista</string>
    <string name="menu_watched">Assistidos</string>
    <string name="watched_movies">Filmes assistidos</string>
    <string name="my_list">Minha Lista</string>
    <string name="tv_my_account">Minha Conta</string>
    <string name="btn_enter">Entrar</string>
    <string name="streamings">Onde assistir</string>
    <string name="information_title">Sinopse</string>
    <string name="trailer_watch_btn_text">Assistir Trailer</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Senha</string>
    <string name="btn_register">Criar conta</string>
    <string name="arrow_back">Voltar</string>
    <string name="title_popular">Populares</string>
    <string name="title_nowPlaying">Lançamentos</string>
    <string name="title_sugestion">Sugestões</string>
    <string name="tv_watched_movies">Assistidos</string>
    <string name="tv_my_list">Minha lista</string>
    <string name="error_default">Erro desconhecido, tente novamente.</string>
    <string name="info">+ Info</string>
    <string name="title_top_rated">Maiores Notas</string>
    <string name="cast_not_found">Elenco: Não encontrado</string>
    <string name="cast">Elenco:</string>
    <string name="name">Nome</string>
    <string name="forgot_password"><u>Esqueci minha senha</u></string>
    <string name="create_account">Ainda não possui uma conta? <u>Criar agora!</u></string>
    <string name="my_account">Minha conta</string>
    <string name="search">Procurar</string>
    <string name="txt_shared_title">"Compartilhar via"</string>
    <string name="txt_share">Compartilhar</string>
    <string name="director">Direção:</string>
    <string name="txt_credits">Conectando as pessoas através dos filmes</string>

</resources>