<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/login_animation"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:layout_marginHorizontal="60dp"
            android:layout_marginTop="40dp"
            app:lottie_rawRes="@raw/login"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_email"
            android:layout_width="0dp"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:boxStrokeWidth="0dp"
            app:hintTextColor="@color/primary"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintBottom_toTopOf="@id/tf_password"
            app:layout_constraintEnd_toEndOf="@id/login_animation"
            app:layout_constraintStart_toStartOf="@id/login_animation"
            app:layout_constraintTop_toBottomOf="@id/login_animation"
            app:startIconDrawable="@drawable/ic_baseline_person_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tf_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textCursorDrawable="@null"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_password"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:counterMaxLength="12"
            app:hintTextColor="@color/primary"
            app:layout_constraintEnd_toEndOf="@id/tf_email"
            app:layout_constraintStart_toStartOf="@id/tf_email"
            app:layout_constraintTop_toBottomOf="@+id/tf_email"
            app:layout_goneMarginBottom="20dp"
            app:passwordToggleContentDescription="Mostrar senha"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tf_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textCursorDrawable="@null"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_enter"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="@string/btn_enter"
            android:layout_marginHorizontal="45dp"
            android:textColor="@color/white"
            android:layout_marginVertical="20dp"
            android:backgroundTint="@color/secondary"
            app:layout_constraintTop_toBottomOf="@id/tf_password"
            app:layout_constraintStart_toStartOf="@id/tf_password"
            app:layout_constraintEnd_toEndOf="@id/tf_password"/>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/btn_google"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="@string/btn_register"
            android:textColor="@color/white"
            android:layout_marginVertical="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@id/btn_enter"
            app:layout_constraintStart_toStartOf="@id/btn_enter"
            app:layout_constraintEnd_toEndOf="@id/btn_enter"/>

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:text="@string/forgot_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_google" />

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:text="@string/create_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvForgotPassword" />




    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>